tests/invalid/runtime/io_read_size_invalid.pts
import Io;
import Fs;

function main() : void {
    string path = Io.tempPath();
    TextFile f = Io.openText(path, "w");
    f.write("x");
    f.close();

    TextFile r = Io.openText(path, "r");
    try {
        r.read(0);
    } finally {
        r.close();
        if (Fs.exists(path)) Fs.rm(path);
    }
}
